--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    font-family: sans-serif;
+}
 #game {
     border: 3px solid #333;
     height: 200px;
@@ -51,4 +54,8 @@
     to {
         left: -30px;
     }
+}
+#gameovertext {
+    font-family: sans-serif;
+    position: absolute;
 }
